[gd_scene load_steps=8 format=3 uid="uid://ci2h3qilfii7k"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_aqnox"]
[ext_resource type="FontFile" uid="uid://csxjne8hbtf1k" path="res://Assets/DS-DIGIB.TTF" id="1_uy5tg"]
[ext_resource type="Texture2D" uid="uid://dwaufexe0ermm" path="res://Assets/button_smile.png" id="2_bej4u"]
[ext_resource type="Texture2D" uid="uid://y3eye77pm0r" path="res://Assets/button_smile_pressed.png" id="3_ewsv6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1dx2"]
bg_color = Color(0.515208, 0.515208, 0.515208, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynth1"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cuwkw"]
bg_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_aqnox")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 75)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u1dx2")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="MinesCountPanel" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ynth1")

[node name="MinesCountLabel" type="Label" parent="PanelContainer/HBoxContainer/MinesCountPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uy5tg")
theme_override_font_sizes/font_size = 40
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameStatusButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_bej4u")
texture_pressed = ExtResource("3_ewsv6")
stretch_mode = 0

[node name="TimerPanel" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cuwkw")

[node name="TimerCountLabel" type="Label" parent="PanelContainer/HBoxContainer/TimerPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_uy5tg")
theme_override_font_sizes/font_size = 40
text = "001"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelContainer/HBoxContainer/GameStatusButton" to="." method="_on_game_status_button_pressed"]
